--- a/GoIT/markup/home/lesson1/task1.html
+++ b/GoIT/markup/home/lesson1/task1.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title></title>
+</head>
+<body>
+    <p> 1 абзац с текстом, <strong>с выделениями слов жирностью</strong>, <em>курсивом</em>, <u>подчеркнутым текстом</u>, и
+        <strike> перечеркнутым текстом.</strike>
+    </p>
+    <p align="right"> 1 абзац с выравнивание м текста по правому краю </p>
+    <p align="center"> 1 абзац текста с выравниванием текста по центру</p>
+    <p align="justify"> 1 абзац текста с выравниванием одновременно по обоим краям (растянутый) 1 абзац текста с выравниванием одновременно по обоим краям (растянутый) 1 абзац текста с выравниванием одновременно по обоим краям (растянутый) 1 абзац текста с выравниванием одновременно по обоим краям (растянутый) 1 абзац текста с выравниванием одновременно по обоим краям (растянутый) 1 абзац текста с выравниванием одновременно по обоим краям (растянутый) 1 абзац текста с выравниванием одновременно по обоим краям (растянутый)</p>
+</body>
+</html>
