--- a/GoIT/markup/home/lesson1/task4.html
+++ b/GoIT/markup/home/lesson1/task4.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <title></title>
 </head>
-    <a href="task1.html">Task1</a></br>
-    <a href="task2.html">Task2</a></br>
-    <a href="task3.html">Task3</a></br>
-    <a href="http://goit.com.ua/">GoIT</a></br>
+<body>
+    <a href="task1.html">Task1</a><br>
+    <a href="task2.html">Task2</a><br>
+    <a href="task3.html">Task3</a><br>
+    <a href="http://goit.com.ua/">GoIT</a><br>
     <a href="http://ya.ru/" target="blank">Ya.Ru</a>
 </body>
 </html>
