--- a/GoIT/markup/class/lesson1/task2.html
+++ b/GoIT/markup/class/lesson1/task2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Task 1.2</title>
 </head>
 <body>
     <img src="256px-Rogue_X-Men.jpg">
