Home Task 1: done

--- a/GoIT/markup/home/lesson1/task1.html
+++ b/GoIT/markup/home/lesson1/task1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Task 1.1</title>
 </head>
 <body>
     <p> 1 абзац с текстом, <strong>с выделениями слов жирностью</strong>, <em>курсивом</em>, <u>подчеркнутым текстом</u>, и
