--- a/GoIT/markup/home/lesson1/task4.html
+++ b/GoIT/markup/home/lesson1/task4.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Task 1.4</title>
 </head>
 <body>
     <a href="task1.html">Task1</a><br>
