--- a/GoIT/markup/home/lesson1/task2.html
+++ b/GoIT/markup/home/lesson1/task2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Task 1.2</title>
 </head>
 <body>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/Hopetoun_falls.jpg/1280px-Hopetoun_falls.jpg" width="1024" height="684">
