--- a/GoIT/markup/home/lesson1/task3.html
+++ b/GoIT/markup/home/lesson1/task3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Task 1.3</title>
 </head>
 <body>
     <p>SO<sub>2</sub>+NaOH=Na<sub>2</sub>SO<sub>3</sub>+H<sub>2</sub>O</p>
