--- a/GoIT/markup/home/lesson2/task4.html
+++ b/GoIT/markup/home/lesson2/task4.html
@@ -5,11 +5,13 @@
     <title>Task 2.4</title>
 </head>
 <body>
-    <ul>
-        <li><a href="task1.html">Task 1</a></li>
-        <li><a href="task2.html">Task 2</a></li>
-        <li><a href="task3.html">Task 3</a></li>
-    </ul>
+    <nav>
+        <ul>
+            <li><a href="task1.html">Task 1</a></li>
+            <li><a href="task2.html">Task 2</a></li>
+            <li><a href="task3.html">Task 3</a></li>
+        </ul>
+    </nav>
 
     <p><strong>Спутники некоторых планет</strong></p>
     <ul>
