--- a/GoIT/markup/home/lesson2/task3.html
+++ b/GoIT/markup/home/lesson2/task3.html
@@ -23,35 +23,36 @@
         <!-- как отображать точную копию полей для выбора месяца и года? -->
         <p>Month and Year of birth<br>
             <select name="date_of_birth">
-                <option>January</option>
-                <option>February</option>
-                <option>March</option>
-                <option>April</option>
-                <option>May</option>
-                <option>June</option>
-                <option>July</option>
-                <option>August</option>
-                <option>September</option>
-                <option>October</option>
-                <option>November</option>
-                <option>December</option>
+                <option value="jan">January</option>
+                <option value="feb">February</option>
+                <option value="mar">March</option>
+                <option value="apr">April</option>
+                <option value="may">May</option>
+                <option value="jun">June</option>
+                <option value="jul">July</option>
+                <option value="aug">August</option>
+                <option value="sep">September</option>
+                <option value="oct">October</option>
+                <option value="nov">November</option>
+                <option value="dec">December</option>
             </select>
             <!--понимаю, что предполагалось использовать селект и можно было бы вести только пару лет, однако решила поразнообразничать, не использовала <input type="month">, так как он визуально координально отличается от того, что было в задании-->
             <input type="number" name="date_of_birth" value="1984" max="2015" min="1900" placeholder="1900"/></p>
         <p>Skills and Technologies<br>
             <select name="skills" size="10">
                 <!--пока не поняла как с помощью только html возможно убрать скрол-->
-                <!--как сделать дерево?-->
-                <option>Tech skills</option>
-                <option>HTML</option>
-                <option>CSS</option>
-                <option>JavaScript</option>
-                <option>git</option>
-                <option>Soft skills</option>
-                <option>Time management</option>
-                <option>Proactivity</option>
-                <option>Teamwork</option>
-                <option>Leadership</option>
+                <optgroup Label="Tech skills">
+                    <option value="_html_">HTML</option>
+                    <option value="_css_">CSS</option>
+                    <option value="_js_">JavaScript</option>
+                    <option value="_git_">git</option>
+                </optgroup>
+                <optgroup label="Soft skills">
+                    <option value="time_man">Time management</option>
+                    <option value="proact">Proactivity</option>
+                    <option value="teamwork">Teamwork</option>
+                    <option value="leadership">Leadership</option>
+                </optgroup>
             </select></p>
 
         <p>Photo<br>
