added accept to the <input type="file"...>

--- a/GoIT/markup/home/lesson2/task3.html
+++ b/GoIT/markup/home/lesson2/task3.html
@@ -56,7 +56,7 @@
             </select></p>
 
         <p>Photo<br>
-            <input type="file" name="file" value="Choose file"/></p>
+            <input type="file" name="file" value="Choose file" accept="image/*"/></p>
         <p><label for="comment">Comments</label><br>
             <textarea rows="4" cols="23" name="comment" id="comment"></textarea></p>
         <p><input type="submit" value="Save"></p>
