started block "Prices"

--- a/GoIT/markup/home/Advanced/bazinger/index.html
+++ b/GoIT/markup/home/Advanced/bazinger/index.html
@@ -36,7 +36,24 @@
         </div>
 
        <div id="prices">
+           <h1>choose your price</h1>
 
+           <p>summarise what your product is all about</p>
+
+           <div>
+               <div class="basic_package">
+                   <div class="pack_head_1">BASIC PACKAGE</div>
+                   <div class="price">
+                       <p>20$</p>
+                   </div>
+                   <p>Nullam suscipit vitae</p>
+
+                   <p>Etiam faucibus</p>
+
+                   <p>Vivamus viverra</p>
+                   <input type="button" name="purchase_basic_package" value="PURCHASE">
+               </div>
+           </div>
         </div>
         <div id="testimonials">
 
