Home Task 4: done

--- a/GoIT/markup/home/lesson4/task2.html
+++ b/GoIT/markup/home/lesson4/task2.html
@@ -7,16 +7,28 @@
 </head>
 <body class="task2">
 <div>
-    <nav>
-        <span>HOME</span>
-        <span>NEWS</span>
-        <span>ECONOMICS</span>
-        <span>LOCAL</span>
-        <span>SPORT</span>
-        <span>CULTURE</span>
-        <span>TRAVELS</span>
-        <span class="right">MORE</span>
-    </nav>
+    <!-- Я бы сделала так -->
+    <!--<nav>-->
+    <!--<span>HOME</span>-->
+    <!--<span>NEWS</span>-->
+    <!--<span>ECONOMICS</span>-->
+    <!--<span>LOCAL</span>-->
+    <!--<span>SPORT</span>-->
+    <!--<span>CULTURE</span>-->
+    <!--<span>TRAVELS</span>-->
+    <!--<span class="right">MORE</span>-->
+    <!--</nav>-->
+    <!-- Но можно и так -->
+    <ul>
+        <li>HOME</li>
+        <li>NEWS</li>
+        <li>ECONOMICS</li>
+        <li>LOCAL</li>
+        <li>SPORT</li>
+        <li>CULTURE</li>
+        <li>TRAVELS</li>
+        <li class="right">MORE</li>
+    </ul>
 </div>
 </body>
 </html>
