--- a/GoIT/markup/home/lesson4/task1.html
+++ b/GoIT/markup/home/lesson4/task1.html
@@ -7,15 +7,26 @@
 </head>
 <body class="task1">
 <div>
-    <nav>
-        <span>HOME</span>
-        <span>NEWS</span>
-        <span>ECONOMICS</span>
-        <span>LOCAL</span>
-        <span>SPORT</span>
-        <span>CULTURE</span>
-        <span>TRAVELS</span>
-    </nav>
+    <!-- Я бы здесь лучше использовала -->
+    <!--<nav>-->
+    <!--<a href="">HOME</a>-->
+    <!--<a href="">NEWS</a>-->
+    <!--<a href="">ECONOMICS</a>-->
+    <!--<a href="">LOCAL</a>-->
+    <!--<a href="">SPORT</a>-->
+    <!--<a href="">CULTURE</a>-->
+    <!--<a href="">TRAVELS</a>-->
+    <!--</nav>-->
+    <!-- Но можно и-->
+    <ul>
+        <li>HOME</li>
+        <li>NEWS</li>
+        <li>ECONOMICS</li>
+        <li>LOCAL</li>
+        <li>SPORT</li>
+        <li>CULTURE</li>
+        <li>TRAVELS</li>
+    </ul>
 </div>
 </body>
 </html>
