--- a/GoIT/markup/home/lesson5/task1.html
+++ b/GoIT/markup/home/lesson5/task1.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <link href="style.css" rel="stylesheet">
-    <title>Task 4.2</title>
+    <title>Task 5.1</title>
 </head>
-<body class="task2">
+<body class="task1">
 <div>
     <!-- Я бы сделала так -->
     <!--<nav>-->
@@ -20,7 +20,20 @@
     <!--</nav>-->
     <!-- Но можно и так -->
     <ul>
-        <li>HOME</li>
+        <li>HOME
+            <ul class="submenu">
+                <li>Amsterdam</li>
+                <li>Bahamas</li>
+                <li>Jamaica</li>
+                <li>Las Vegas</li>
+                <li>London</li>
+                <li>Los Angeles</li>
+                <li>Maiami</li>
+                <li>Montreal</li>
+                <li>Paris</li>
+                <li>Rome</li>
+            </ul>
+        </li>
         <li>NEWS</li>
         <li>ECONOMICS</li>
         <li>LOCAL</li>
