--- a/GoIT/markup/home/lesson5/task1.html
+++ b/GoIT/markup/home/lesson5/task1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,19 +7,7 @@
 </head>
 <body class="task1">
 <div>
-    <!-- Я бы сделала так -->
-    <!--<nav>-->
-    <!--<a href="">HOME</a>-->
-    <!--<a href="">NEWS</a>-->
-    <!--<a href="">ECONOMICS</a>-->
-    <!--<a href="">LOCAL</a>-->
-    <!--<a href="">SPORT</a>-->
-    <!--<a href="">CULTURE</a>-->
-    <!--<a href="">TRAVELS</a>-->
-    <!--<a href="" class="right">MORE</span>-->
-    <!--</nav>-->
-    <!-- Но можно и так -->
-    <ul>
+    <ul class="menu">
         <li>HOME
             <ul class="submenu">
                 <li>Amsterdam</li>
@@ -34,13 +22,104 @@
                 <li>Rome</li>
             </ul>
         </li>
-        <li>NEWS</li>
-        <li>ECONOMICS</li>
-        <li>LOCAL</li>
-        <li>SPORT</li>
-        <li>CULTURE</li>
-        <li>TRAVELS</li>
-        <li class="right">MORE</li>
+        <li>NEWS		
+			<ul class="submenu">
+                <li>Amsterdam</li>
+                <li>Bahamas</li>
+                <li>Jamaica</li>
+                <li>Las Vegas</li>
+                <li>London</li>
+                <li>Los Angeles</li>
+                <li>Maiami</li>
+                <li>Montreal</li>
+                <li>Paris</li>
+                <li>Rome</li>
+            </ul>
+		</li>
+        <li>ECONOMICS
+			<ul class="submenu">
+                <li>Amsterdam</li>
+                <li>Bahamas</li>
+                <li>Jamaica</li>
+                <li>Las Vegas</li>
+                <li>London</li>
+                <li>Los Angeles</li>
+                <li>Maiami</li>
+                <li>Montreal</li>
+                <li>Paris</li>
+                <li>Rome</li>
+            </ul>
+		</li>
+        <li>LOCAL
+			<ul class="submenu">
+                <li>Amsterdam</li>
+                <li>Bahamas</li>
+                <li>Jamaica</li>
+                <li>Las Vegas</li>
+                <li>London</li>
+                <li>Los Angeles</li>
+                <li>Maiami</li>
+                <li>Montreal</li>
+                <li>Paris</li>
+                <li>Rome</li>
+            </ul>
+		</li>
+        <li>SPORT
+			<ul class="submenu">
+                <li>Amsterdam</li>
+                <li>Bahamas</li>
+                <li>Jamaica</li>
+                <li>Las Vegas</li>
+                <li>London</li>
+                <li>Los Angeles</li>
+                <li>Maiami</li>
+                <li>Montreal</li>
+                <li>Paris</li>
+                <li>Rome</li>
+            </ul>
+		</li>
+        <li>CULTURE
+			<ul class="submenu">
+                <li>Amsterdam</li>
+                <li>Bahamas</li>
+                <li>Jamaica</li>
+                <li>Las Vegas</li>
+                <li>London</li>
+                <li>Los Angeles</li>
+                <li>Maiami</li>
+                <li>Montreal</li>
+                <li>Paris</li>
+                <li>Rome</li>
+            </ul>
+		</li>
+        <li>TRAVELS
+			<ul class="submenu">
+                <li>Amsterdam</li>
+                <li>Bahamas</li>
+                <li>Jamaica</li>
+                <li>Las Vegas</li>
+                <li>London</li>
+                <li>Los Angeles</li>
+                <li>Maiami</li>
+                <li>Montreal</li>
+                <li>Paris</li>
+                <li>Rome</li>
+            </ul>
+		</li>
+        <li>MORE
+			<ul class="submenu">
+                <li>Amsterdam</li>
+                <li>Bahamas</li>
+                <li>Jamaica</li>
+                <li>Las Vegas</li>
+                <li>London</li>
+                <li>Los Angeles</li>
+                <li>Maiami</li>
+                <li>Montreal</li>
+                <li>Paris</li>
+                <li>Rome</li>
+            </ul>
+		</li>
     </ul>
 </div>
 </body>
