--- a/GoIT/markup/home/lesson5/task2.html
+++ b/GoIT/markup/home/lesson5/task2.html
@@ -17,6 +17,7 @@
 				<li>Staging or Production</li>
 				<li>Unlimited e-Mails</li>
 			</ul>
+			<input type="button" name="submit" value="ENROLL TODAY">
 		</section>
 	</div>	
 </body>
