--- a/GoIT/markup/home/lesson4/task1.html
+++ b/GoIT/markup/home/lesson4/task1.html
@@ -18,6 +18,9 @@
     <!--<a href="">TRAVELS</a>-->
     <!--</nav>-->
     <!-- Но можно и-->
+	
+	<!--Я бы тоже использовал nav, но можно и...-->
+	
     <ul>
         <li>HOME</li>
         <li>NEWS</li>
