Advanced: in progress

--- a/GoIT/markup/home/Advanced/bazinger/index.html
+++ b/GoIT/markup/home/Advanced/bazinger/index.html
@@ -46,12 +46,14 @@
                    <div class="price">
                        <p>20$</p>
                    </div>
-                   <p>Nullam suscipit vitae</p>
+                   <div class="price_discription">
+                       <p>Nullam suscipit vitae</p>
 
-                   <p>Etiam faucibus</p>
+                       <p>Etiam faucibus</p>
 
-                   <p>Vivamus viverra</p>
-                   <input type="button" name="purchase_basic_package" value="PURCHASE">
+                       <p>Vivamus viverra</p>
+                       <input type="button" name="purchase_basic_package" value="PURCHASE">
+                   </div>
                </div>
            </div>
         </div>
