--- a/GoIT/markup/home/lesson7/task1.html
+++ b/GoIT/markup/home/lesson7/task1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="style.css" rel="stylesheet">
+    <link href="task1.css" rel="stylesheet">
     <title>Task 7.1</title>
 </head>
 <body>
@@ -28,6 +28,7 @@
     <p class="sight10">Н К И Б М Ш Ы Б</p>
 
     <div class="uline"></div>
+
     <p class="sight15">Ш И Н К М И Ы Б</p>
 
     <p class="sight20">И М Ш Ы Н Б М К</p>
