--- a/GoIT/markup/home/lesson7/task2.html
+++ b/GoIT/markup/home/lesson7/task2.html
@@ -6,83 +6,120 @@
     <title>Project1</title>
 </head>
 <body>
-<div id="pricing">
-    <h1>We have a very flexible offers for you to choose</h1>
-    <ul class="price">
-        <li class="price-item">
-            <div class="price-item-header">Standard</div>
-            <section class="price-item-description">
-                <p>Iconic graphics</p>
-                <span>$</span><span>10</span><span>Monthly</span>
-                <ul>
-                    <li>Unmetered Traffic</li>
-                    <li>Unlimited Domain</li>
-                    <li>Unlimited Databases</li>
-                    <li>Unlimited e-Mails</li>
-                </ul>
-                <input type="button" name="standard_submit" value="ENROLL TODAY">
-            </section>
-        </li>
-        <li class="price-item">
-            <div class="price-item-header">Best Value</div>
-            <section class="price-item-description">
-                <p>Iconic graphics</p>
-                <span>$</span><span>25</span><span>Monthly</span>
-                <ul>
-                    <li>PHP, PERL, ASP, JSP</li>
-                    <li>SEMI DEDICATED</li>
-                    <li>Staging or Production</li>
-                    <li>Unlimited e-Mails</li>
-                </ul>
-                <input type="button" name="best_value_submit" value="ENROLL TODAY">
-            </section>
-        </li>
-        <li class="price-item">
-            <div class="price-item-header">Ultimate</div>
-            <section class="price-item-description">
-                <p>Iconic graphics</p>
-                <span>$</span><span>35</span><span>Monthly</span>
-                <ul>
-                    <li>Semi Dedicated</li>
-                    <li>1TB Storage</li>
-                    <li>Faster Site, Better SEO</li>
-                    <li>Unlimited e-Mails</li>
-                </ul>
-                <input type="button" name="ultimate_submit" value="ENROLL TODAY">
-            </section>
-        </li>
-    </ul>
-</div>
-
-<div class="testimonials">
-    <div class="testimonials_gray"></div>
-    <div class="testimonials_blue"></div>
-    <h1><span>What </span>client says</h1>
-
-    <div class="testimonials-section">
-        <section>
-            <img src="img/woman_pic.jpg" alt="Customer">
-
-            <div class="testimonials-message">
-                <div class="testimonials-message-links">
-                    <a href="">- Staciya Trollio</a>
-                    <a href="">Customer</a>
-                </div>
-                <p>Lorem Ipsum is simply dummy text of the printing and industry. Lorem Ipsum has been the industry.</p>
-            </div>
-        </section>
-        <section>
-            <img src="img/man_pic.jpg" alt="Customer">
-
-            <div class="testimonials-message">
-                <div class="testimonials-message-links">
-                    <a href="">- David Soul</a>
-                    <a href="">Customer</a>
-                </div>
-                <p>Lorem Ipsum is simply dummy text of the printing and industry. Lorem Ipsum has been the industry.</p>
-            </div>
-        </section>
+<div class="landing">
+    <div class="navigation">
+        <div class="navigation-logo">
+            <p>Company <span>name</span></p>
+        </div>
+        <nav>
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#services">Services</a>
+            <a href="#pricing">Pricing</a>
+            <a href="#contact">Contact</a>
+        </nav>
     </div>
+
+    <div id="home">
+        <h1>We are specialist in<br>
+            <span>responsive designs, stationary and wordpress themes</span>
+        </h1>
+
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's standard dummy text.</p>
+        <input type="button" name="home_submit" value="Button name">
+    </div>
+
+    <div id="about"></div>
+
+    <div id="portfolio"></div>
+
+    <div id="services"></div>
+
+    <div id="pricing">
+        <h1>We have a very flexible offers for you to choose</h1>
+        <ul class="price">
+            <li class="price-item">
+                <div class="price-item-header">Standard</div>
+                <section class="price-item-description">
+                    <p>Iconic graphics</p>
+                    <span>$</span><span>10</span><span>Monthly</span>
+                    <ul>
+                        <li>Unmetered Traffic</li>
+                        <li>Unlimited Domain</li>
+                        <li>Unlimited Databases</li>
+                        <li>Unlimited e-Mails</li>
+                    </ul>
+                    <input type="button" name="standard_submit" value="ENROLL TODAY">
+                </section>
+            </li>
+            <li class="price-item">
+                <div class="price-item-header">Best Value</div>
+                <section class="price-item-description">
+                    <p>Iconic graphics</p>
+                    <span>$</span><span>25</span><span>Monthly</span>
+                    <ul>
+                        <li>PHP, PERL, ASP, JSP</li>
+                        <li>SEMI DEDICATED</li>
+                        <li>Staging or Production</li>
+                        <li>Unlimited e-Mails</li>
+                    </ul>
+                    <input type="button" name="best_value_submit" value="ENROLL TODAY">
+                </section>
+            </li>
+            <li class="price-item">
+                <div class="price-item-header">Ultimate</div>
+                <section class="price-item-description">
+                    <p>Iconic graphics</p>
+                    <span>$</span><span>35</span><span>Monthly</span>
+                    <ul>
+                        <li>Semi Dedicated</li>
+                        <li>1TB Storage</li>
+                        <li>Faster Site, Better SEO</li>
+                        <li>Unlimited e-Mails</li>
+                    </ul>
+                    <input type="button" name="ultimate_submit" value="ENROLL TODAY">
+                </section>
+            </li>
+        </ul>
+    </div>
+
+    <div id="testimonials">
+        <div class="testimonials_gray"></div>
+        <div class="testimonials_blue"></div>
+        <h1><span>What </span>client says</h1>
+
+        <div class="testimonials-section">
+            <section>
+                <img src="img/woman_pic.jpg" alt="Customer">
+
+                <div class="testimonials-message">
+                    <div class="testimonials-message-links">
+                        <a href="">- Staciya Trollio</a>
+                        <a href="">Customer</a>
+                    </div>
+                    <p>Lorem Ipsum is simply dummy text of the printing and industry. Lorem Ipsum has been the
+                        industry.</p>
+                </div>
+            </section>
+            <section>
+                <img src="img/man_pic.jpg" alt="Customer">
+
+                <div class="testimonials-message">
+                    <div class="testimonials-message-links">
+                        <a href="">- David Soul</a>
+                        <a href="">Customer</a>
+                    </div>
+                    <p>Lorem Ipsum is simply dummy text of the printing and industry. Lorem Ipsum has been the
+                        industry.</p>
+                </div>
+            </section>
+        </div>
+    </div>
+
+    <div id="contacts"></div>
+
 </div>
 </body>
 </html>
