--- a/GoIT/markup/home/Project_1/project_1.html
+++ b/GoIT/markup/home/Project_1/project_1.html
@@ -92,7 +92,7 @@
 
         <div class="testimonials-section">
             <section>
-                <img src="../lesson7/img/woman_pic.jpg" alt="Customer">
+                <img src="img/woman_pic.jpg" alt="Customer">
 
                 <div class="testimonials-message">
                     <div class="testimonials-message-links">
@@ -104,7 +104,7 @@
                 </div>
             </section>
             <section>
-                <img src="../lesson7/img/man_pic.jpg" alt="Customer">
+                <img src="img/man_pic.jpg" alt="Customer">
 
                 <div class="testimonials-message">
                     <div class="testimonials-message-links">
