Moved to the folder "Project_1"

--- a/GoIT/markup/home/Project_1/project_1.html
+++ b/GoIT/markup/home/Project_1/project_1.html
@@ -31,7 +31,9 @@
         <input type="button" name="home_submit" value="Button name">
     </div>
 
-    <div id="about"></div>
+    <div id="about">
+
+    </div>
 
     <div id="portfolio"></div>
 
