--- a/GoIT/markup/home/lesson8/task1.html
+++ b/GoIT/markup/home/lesson8/task1.html
@@ -6,14 +6,18 @@
     <title>Task 8.1</title>
 </head>
 <body>
-<div class="arrow">
-    <div class="search_arrow">
-        <div>
-            <input type="text" name="search">
-            <input type="button" name="search_button" value="Найти">
-        </div>
-        <p>Нарпимер, <span>советник</span></p>
+
+<div class="search_arrow">
+    <div>
+        <input type="text" name="search">
+        <input type="button" name="search_button" value="Найти">
     </div>
+    <label id="checkbox">
+        <input type="checkbox" id="cbs" name="serch_by_describtion" value="a1">
+        <label for="cbs"></label>
+        поиск по описаниям сайтов
+    </label>
 </div>
+
 </body>
 </html>
