Home Task 11: done

--- a/GoIT/markup/home/lesson11/task1.html
+++ b/GoIT/markup/home/lesson11/task1.html
@@ -19,9 +19,9 @@
         <div class="my_work-block-item-zoom">
             <img class="my_work-block-item-zoom-img" src="img/bycicle.jpg" alt=""/>
 
-            <div class="my_work-block-item-zoom-close">
+            <button class="my_work-block-item-zoom-close">
                 <i class="fa fa-times"></i>
-            </div>
+            </button>
         </div>
     </div>
 </div>
