Exam: in progress

--- a/GoIT/markup/exam/exam2/index.html
+++ b/GoIT/markup/exam/exam2/index.html
@@ -74,6 +74,10 @@
                     <span>IN 720P QALITY</span></p>
             </button>
 
+            <div class="ad-description-more">
+                Or just <a href="">click here </a> and fins out more
+            </div>
+
         </div>
     </section>
     <hr class="between_sections">
@@ -87,7 +91,22 @@
                 <div class="articles-body-item-head">
 
                     <div class="articles-body-item-head-pic">
-                        <img src="" alt=""/>
+
+                        <img src="img/forest.jpg" alt=""/>
+
+                        <div class="articles-body-item-head-pic-hover">
+                            <div class="circle-button articles-body-item-head-pic-hover-arrow">
+                            </div>
+
+                            <div class="circle-button articles-body-item-head-pic-hover-plus">
+                                <span>+</span>
+                            </div>
+
+                            <div class="circle-button articles-body-item-head-pic-hover-download">
+                                <img src="img/icon_sprite.png">
+                            </div>
+                        </div>
+
                     </div>
 
                     <h3 class="articles-body-item-head-title">Vehicula Inceptos Pharetra</h3>
@@ -107,38 +126,61 @@
 
             </div>
 
+
             <div class="articles-body-item">
                 <div class="articles-body-item-head">
-                    <div class="articles-body-item-head-pic"><img src="" alt=""/></div>
-                    <h3 class="articles-body-item-head-title"></h3>
 
-                    <p class="articles-body-item-head-description"></p>
+                    <div class="articles-body-item-head-pic">
+                        <img src="img/fields.jpg" alt=""/>
+                    </div>
+
+                    <h3 class="articles-body-item-head-title">Euismod
+                        Pellentesque Egestas Commodo
+                    </h3>
+
+                    <p class="articles-body-item-head-description">Cum sociis
+                        natoque penatibus et magnis dis parturient.
+                    </p>
                 </div>
-                <p class="articles-body-item-content"></p>
+                <p class="articles-body-item-content">Morbi leo risus, porta ac
+                    consectetur ac, vestibulum at eros. Cras justo odio, dapibus
+                    ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac
+                    cursus commodo, tortor mauris condimentum nibh, ut fermentum
+                    massa justo sit amet risus. Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit.</p>
             </div>
 
             <div class="articles-body-item">
                 <div class="articles-body-item-head">
-                    <div class="articles-body-item-head-pic"><img src="" alt=""/></div>
-                    <h3 class="articles-body-item-head-title"></h3>
 
-                    <p class="articles-body-item-head-description"></p>
+                    <div class="articles-body-item-head-pic">
+                        <img src="img/bird.jpg" alt=""/>
+                    </div>
+
+                    <h3 class="articles-body-item-head-title"> Tristique Dapibus</h3>
+
+                    <p class="articles-body-item-head-description">Curabitur blandit tempus porttitor.</p>
                 </div>
-                <p class="articles-body-item-content"></p>
+
+                <p class="articles-body-item-content">Fusce dapibus, tellus ac
+                    cursus commodo, tortor mauris condimentum nibh, ut fermentum
+                    massa justo sit amet risus. Vivamus sagittis lacus vel augue
+                    laoreet rutrum faucibus dolor auctor. Nullam quis risus eget
+                    urna mollis ornare vel eu leo. Donec sed odio dui.</p>
             </div>
 
         </div>
     </section>
 
     <section class="content">
-        <h2 class="articles-title"></h2>
+        <h2 class="articles-title">Ta<span>bbb</span>s get your content in line</h2>
 
         <div class="content-body">
-            <ul class="content-body-menu">
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
+            <div class="content-body-tabs-header">
+                <a class="content-body-tabs-item content-body-tabs-item-selected">Tabbb One</a>
+                <a class="content-body-tabs-item">Tabbb Two</a>
+                <a class="content-body-tabs-item">Tabbb Three</a>
+            </div>
             <h3 class="content-body-head"></h3>
             <ul class="content-body-list">
                 <li></li>
@@ -161,6 +203,7 @@
             </div>
         </div>
     </section>
+    <hr class="between_sections">
 
     <footer>
         <div class="footer-item">
