--- a/GoIT/markup/exam/exam2/index.html
+++ b/GoIT/markup/exam/exam2/index.html
@@ -173,84 +173,104 @@
     </section>
 
     <section class="content">
-        <h2 class="articles-title">Ta<span>bbb</span>s get your content in line</h2>
+        <h2 class="articles-title">Ta<span class="text-highlight">bbb</span>s get your content in line</h2>
 
         <div class="content-body">
-            <div class="content-body-tabs-header">
-                <a class="content-body-tabs-item content-body-tabs-item-selected">Tabbb One</a>
-                <a class="content-body-tabs-item">Tabbb Two</a>
-                <a class="content-body-tabs-item">Tabbb Three</a>
-            </div>
-            <h3 class="content-body-head"></h3>
-            <ul class="content-body-list">
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-            <div class="content-body-item">
-                <div class="content-body-item-img"><img src="" alt=""/></div>
-                <h4 class="content-body-item-head"></h4>
+            <div class="content-body-tabs">
+                <div class="content-body-tabs-header">
+                    <a class="content-body-tabs-item content-body-tabs-item-selected">Tabbb One</a>
+                    <a class="content-body-tabs-item">Tabbb Two</a>
+                    <a class="content-body-tabs-item">Tabbb Three</a>
+                </div>
 
-                <p class="content-body-item-head"></p>
-            </div>
-            <div class="content-body-item">
-                <div class="content-body-item-img"><img src="" alt=""/></div>
-                <h4 class="content-body-item-head"></h4>
+                <div class="content-body-tabs-content-selected">
+                    <h3 class="content-body-head">You content can be
+                        <span class="text-highlight">highlighted</span> like this.
+                    </h3>
 
-                <p class="content-body-item-head"></p>
+                    <ul class="content-body-list">
+                        <li>Magna Porta</li>
+                        <li>Cras Amet Pharetra</li>
+                        <li>Ornare Dolor Oharetra</li>
+                        <li>Nibh Sit Elit</li>
+                        <li>Venenatis Tortor Aenean</li>
+                    </ul>
+                    <div class="content-body-item">
+                        <div class="content-body-item-img"><img src="img/road.jpg" alt=""/></div>
+                        <h4 class="content-body-item-head">Type a Title</h4>
+
+                        <p class="content-body-item-text">Nulla vitae elit libero, a pharetra augue.
+                            Maecenas sed diam eget risus varius blandit sit amet magna.
+                        </p>
+                    </div>
+                    <div class="content-body-item">
+                        <div class="content-body-item-img"><img src="img/boat.jpg" alt=""/></div>
+                        <h4 class="content-body-item-head"></h4>
+
+                        <p class="content-body-item-text">Donec id elit non mi porta gravida at eget
+                            metus.
+                        </p>
+                    </div>
+
+                    <div class="content-body-tabs-content">Doesn't matter what</div>
+                    <div class="content-body-tabs-content">Who cares?</div>
+
+
+                </div>
             </div>
+
         </div>
     </section>
     <hr class="between_sections">
 
     <footer>
         <div class="footer-item">
-            <h4 class="footer-item-title"></h4>
+            <h4 class="footer-item-title">Single menu title</h4>
             <ul class="footer-item-list">
-                <li><a href="" class="footer-item-list-link"></a></li>
-                <li><a href="" class="footer-item-list-link"></a></li>
-                <li><a href="" class="footer-item-list-link"></a></li>
-                <li><a href="" class="footer-item-list-link"></a></li>
-                <li><a href="" class="footer-item-list-link"></a></li>
-                <li><a href="" class="footer-item-list-link"></a></li>
+                <li><a href="" class="footer-item-list-link">Condimentum Etiam Purus</a></li>
+                <li><a href="" class="footer-item-list-link"></a>Quam Tristique Sem</li>
+                <li><a href="" class="footer-item-list-link"></a>Fusce Parturient</li>
+                <li><a href="" class="footer-item-list-link"></a>Tristique Tortor Condimentum</li>
+                <li><a href="" class="footer-item-list-link"></a>Magna Parturient Aenean</li>
+                <li><a href="" class="footer-item-list-link"></a>Tortor Nibh Etiam</li>
             </ul>
         </div>
 
         <div class="footer-item">
-            <h4 class="footer-item-title"></h4>
-            <ul class="footer-item-list-latest">
-                <li><img src="" alt=""/>
-
-                    <p class="footer-item-list-latest"></p>
-                    <a href="" class="footer-item-list-latest-link"></a></li>
-                <li><img src="" alt=""/>
-
-                    <p class="footer-item-list-latest"></p>
-                    <a href="" class="footer-item-list-latest-link"></a></li>
-                <li><img src="" alt=""/>
-
-                    <p class="footer-item-list-latest"></p>
-                    <a href="" class="footer-item-list-latest-link"></a></li>
+            <h4 class="footer-item-title">Cursus venenats mollis</h4>
+            <ul class="footer-item-list">
+                <li><a href="" class="footer-item-list-link">Condimentum Etiam Purus</a></li>
+                <li><a href="" class="footer-item-list-link"></a>Quam Tristique Sem</li>
+                <li><a href="" class="footer-item-list-link"></a>Fusce Parturient</li>
+                <li><a href="" class="footer-item-list-link"></a>Tristique Tortor Condimentum</li>
+                <li><a href="" class="footer-item-list-link"></a>Magna Parturient Aenean</li>
+                <li><a href="" class="footer-item-list-link"></a>Cursus Justo Fringilla</li>
             </ul>
         </div>
 
         <div class="footer-item">
-            <h4 class="footer-item-title"></h4>
+            <h4 class="footer-item-title">Latest articles</h4>
             <ul class="footer-item-list-latest">
-                <li><img src="" alt=""/>
+                <li>
+                    <p class="footer-item-list-latest">Fusce Etiam Bibenum</p>
+                    <a href="" class="footer-item-list-latest-link">Sed posuere consectetur est
+                        at lobortis.
+                    </a>
+                </li>
 
-                    <p class="footer-item-list-latest"></p>
-                    <a href="" class="footer-item-list-latest-link"></a></li>
-                <li><img src="" alt=""/>
+                <li>
+                    <p class="footer-item-list-latest">Fusce Partrient</p>
+                    <a href="" class="footer-item-list-latest-link">Maecenas faucibus mollis
+                        interdum. Cras justo odio, dapibus ac facilisis in, egestas
+                        eget quam.</a>
+                </li>
 
-                    <p class="footer-item-list-latest"></p>
-                    <a href="" class="footer-item-list-latest-link"></a></li>
-                <li><img src="" alt=""/>
+                <li>
+                    <p class="footer-item-list-latest">Magna Parturient Aenean</p>
+                    <a href="" class="footer-item-list-latest-link">Cum sociis natoque penatibus et
+                        magnis dis parturient montes, nascetur ridiculus mus.</a>
+                </li>
 
-                    <p class="footer-item-list-latest"></p>
-                    <a href="" class="footer-item-list-latest-link"></a></li>
             </ul>
         </div>
     </footer>
