Exam: in progress

--- a/GoIT/markup/exam/exam2/index.html
+++ b/GoIT/markup/exam/exam2/index.html
@@ -41,7 +41,9 @@
             <button class="navigation-menu-button">Apply Now</button>
         </nav>
     </div>
+
     <section class="ad">
+
         <div class="ad-item">
             <div class="ad-item-img">
                 <div class="ad-item-bar-arrow"><img src="img/arrow-left.png" alt="">
@@ -58,6 +60,7 @@
                 </div>
             </div>
         </div>
+
         <div class="ad-description">
             <h1 class="ad-description-title">The amazing Spider-Man</h1>
 
@@ -95,15 +98,15 @@
                         <img src="img/forest.jpg" alt=""/>
 
                         <div class="articles-body-item-head-pic-hover">
-                            <div class="circle-button articles-body-item-head-pic-hover-arrow">
+                            <div class="circle-button">
+                                <div class="articles-body-item-head-pic-hover-arrow"></div>
                             </div>
 
-                            <div class="circle-button articles-body-item-head-pic-hover-plus">
-                                <span>+</span>
+                            <div class="circle-button">
+                                <div class="articles-body-item-head-pic-hover-plus">+</div>
                             </div>
 
                             <div class="circle-button articles-body-item-head-pic-hover-download">
-                                <img src="img/icon_sprite.png">
                             </div>
                         </div>
 
@@ -228,23 +231,23 @@
             <h4 class="footer-item-title">Single menu title</h4>
             <ul class="footer-item-list">
                 <li><a href="" class="footer-item-list-link">Condimentum Etiam Purus</a></li>
-                <li><a href="" class="footer-item-list-link"></a>Quam Tristique Sem</li>
-                <li><a href="" class="footer-item-list-link"></a>Fusce Parturient</li>
-                <li><a href="" class="footer-item-list-link"></a>Tristique Tortor Condimentum</li>
-                <li><a href="" class="footer-item-list-link"></a>Magna Parturient Aenean</li>
-                <li><a href="" class="footer-item-list-link"></a>Tortor Nibh Etiam</li>
+                <li><a href="" class="footer-item-list-link">Quam Tristique Sem</a></li>
+                <li><a href="" class="footer-item-list-link">Fusce Parturient</a></li>
+                <li><a href="" class="footer-item-list-link">Tristique Tortor Condimentum</a></li>
+                <li><a href="" class="footer-item-list-link">Magna Parturient Aenean</a></li>
+                <li><a href="" class="footer-item-list-link">Tortor Nibh Etiam</a></li>
             </ul>
         </div>
 
-        <div class="footer-item">
+        <div class="footer-item footer-item-2">
             <h4 class="footer-item-title">Cursus venenats mollis</h4>
             <ul class="footer-item-list">
                 <li><a href="" class="footer-item-list-link">Condimentum Etiam Purus</a></li>
-                <li><a href="" class="footer-item-list-link"></a>Quam Tristique Sem</li>
-                <li><a href="" class="footer-item-list-link"></a>Fusce Parturient</li>
-                <li><a href="" class="footer-item-list-link"></a>Tristique Tortor Condimentum</li>
-                <li><a href="" class="footer-item-list-link"></a>Magna Parturient Aenean</li>
-                <li><a href="" class="footer-item-list-link"></a>Cursus Justo Fringilla</li>
+                <li><a href="" class="footer-item-list-link">Quam Tristique Sem</a></li>
+                <li><a href="" class="footer-item-list-link">Fusce Parturient</a></li>
+                <li><a href="" class="footer-item-list-link">Tristique Tortor Condimentum</a></li>
+                <li><a href="" class="footer-item-list-link">Magna Parturient Aenean</a></li>
+                <li><a href="" class="footer-item-list-link">Cursus Justo Fringilla</a></li>
             </ul>
         </div>
 
@@ -252,21 +255,21 @@
             <h4 class="footer-item-title">Latest articles</h4>
             <ul class="footer-item-list-latest">
                 <li>
-                    <p class="footer-item-list-latest">Fusce Etiam Bibenum</p>
+                    <p class="footer-item-list-latest-title">Fusce Etiam Bibenum</p>
                     <a href="" class="footer-item-list-latest-link">Sed posuere consectetur est
                         at lobortis.
                     </a>
                 </li>
 
                 <li>
-                    <p class="footer-item-list-latest">Fusce Partrient</p>
+                    <p class="footer-item-list-latest-title">Fusce Partrient</p>
                     <a href="" class="footer-item-list-latest-link">Maecenas faucibus mollis
                         interdum. Cras justo odio, dapibus ac facilisis in, egestas
                         eget quam.</a>
                 </li>
 
                 <li>
-                    <p class="footer-item-list-latest">Magna Parturient Aenean</p>
+                    <p class="footer-item-list-latest-title">Magna Parturient Aenean</p>
                     <a href="" class="footer-item-list-latest-link">Cum sociis natoque penatibus et
                         magnis dis parturient montes, nascetur ridiculus mus.</a>
                 </li>
