Exam: in progress

--- a/GoIT/markup/exam/exam2/index.html
+++ b/GoIT/markup/exam/exam2/index.html
@@ -98,6 +98,7 @@
                         <img src="img/forest.jpg" alt=""/>
 
                         <div class="articles-body-item-head-pic-hover">
+
                             <div class="circle-button">
                                 <div class="articles-body-item-head-pic-hover-arrow"></div>
                             </div>
@@ -106,7 +107,8 @@
                                 <div class="articles-body-item-head-pic-hover-plus">+</div>
                             </div>
 
-                            <div class="circle-button articles-body-item-head-pic-hover-download">
+                            <div class="circle-button">
+                                <div class="articles-body-item-head-pic-hover-download"></div>
                             </div>
                         </div>
 
@@ -255,21 +257,22 @@
             <h4 class="footer-item-title">Latest articles</h4>
             <ul class="footer-item-list-latest">
                 <li>
-                    <p class="footer-item-list-latest-title">Fusce Etiam Bibenum</p>
-                    <a href="" class="footer-item-list-latest-link">Sed posuere consectetur est
-                        at lobortis.
-                    </a>
+                    <span class="footer-item-list-latest-title">Fusce Etiam Bibenum <br>
+                        <a href="" class="footer-item-list-latest-link">Sed posuere consectetur est
+                            at lobortis.
+                        </a>
+                    </span>
                 </li>
 
                 <li>
-                    <p class="footer-item-list-latest-title">Fusce Partrient</p>
+                    <span class="footer-item-list-latest-title">Fusce Partrient</span> <br>
                     <a href="" class="footer-item-list-latest-link">Maecenas faucibus mollis
                         interdum. Cras justo odio, dapibus ac facilisis in, egestas
                         eget quam.</a>
                 </li>
 
                 <li>
-                    <p class="footer-item-list-latest-title">Magna Parturient Aenean</p>
+                    <span class="footer-item-list-latest-title">Magna Parturient Aenean</span>
                     <a href="" class="footer-item-list-latest-link">Cum sociis natoque penatibus et
                         magnis dis parturient montes, nascetur ridiculus mus.</a>
                 </li>
