Exam: in progress

--- a/GoIT/markup/exam/exam2/index.html
+++ b/GoIT/markup/exam/exam2/index.html
@@ -137,6 +137,21 @@
 
                     <div class="articles-body-item-head-pic">
                         <img src="img/fields.jpg" alt=""/>
+
+                        <div class="articles-body-item-head-pic-hover">
+
+                            <div class="circle-button">
+                                <div class="articles-body-item-head-pic-hover-arrow"></div>
+                            </div>
+
+                            <div class="circle-button">
+                                <div class="articles-body-item-head-pic-hover-plus">+</div>
+                            </div>
+
+                            <div class="circle-button">
+                                <div class="articles-body-item-head-pic-hover-download"></div>
+                            </div>
+                        </div>
                     </div>
 
                     <h3 class="articles-body-item-head-title">Euismod
@@ -160,6 +175,21 @@
 
                     <div class="articles-body-item-head-pic">
                         <img src="img/bird.jpg" alt=""/>
+
+                        <div class="articles-body-item-head-pic-hover">
+
+                            <div class="circle-button">
+                                <div class="articles-body-item-head-pic-hover-arrow"></div>
+                            </div>
+
+                            <div class="circle-button">
+                                <div class="articles-body-item-head-pic-hover-plus">+</div>
+                            </div>
+
+                            <div class="circle-button">
+                                <div class="articles-body-item-head-pic-hover-download"></div>
+                            </div>
+                        </div>
                     </div>
 
                     <h3 class="articles-body-item-head-title"> Tristique Dapibus</h3>
@@ -265,16 +295,20 @@
                 </li>
 
                 <li>
-                    <span class="footer-item-list-latest-title">Fusce Partrient</span> <br>
-                    <a href="" class="footer-item-list-latest-link">Maecenas faucibus mollis
+                    <span class="footer-item-list-latest-title">Fusce Partrient <br>
+                        <a href="" class="footer-item-list-latest-link">Maecenas faucibus mollis
                         interdum. Cras justo odio, dapibus ac facilisis in, egestas
                         eget quam.</a>
+                    </span>
+
                 </li>
 
                 <li>
-                    <span class="footer-item-list-latest-title">Magna Parturient Aenean</span>
-                    <a href="" class="footer-item-list-latest-link">Cum sociis natoque penatibus et
+                    <span class="footer-item-list-latest-title">Magna Parturient Aenean <br>
+                        <a href="" class="footer-item-list-latest-link">Cum sociis natoque penatibus et
                         magnis dis parturient montes, nascetur ridiculus mus.</a>
+                    </span>
+
                 </li>
 
             </ul>
