--- a/GoIT/markup/exam/exam2/index.html
+++ b/GoIT/markup/exam/exam2/index.html
@@ -287,27 +287,24 @@
             <h4 class="footer-item-title">Latest articles</h4>
             <ul class="footer-item-list-latest">
                 <li>
-                    <span class="footer-item-list-latest-title">Fusce Etiam Bibenum <br>
-                        <a href="" class="footer-item-list-latest-link">Sed posuere consectetur est
-                            at lobortis.
-                        </a>
-                    </span>
+                    <span class="footer-item-list-latest-title">Fusce Etiam Bibenum</span>
+                    <a href="" class="footer-item-list-latest-link clearfix">Sed posuere consectetur est
+                        at lobortis.
+                    </a>
                 </li>
 
                 <li>
-                    <span class="footer-item-list-latest-title">Fusce Partrient <br>
-                        <a href="" class="footer-item-list-latest-link">Maecenas faucibus mollis
+                    <span class="footer-item-list-latest-title">Fusce Partrient</span>
+                    <a href="" class="footer-item-list-latest-link clearfix">Maecenas faucibus mollis
                         interdum. Cras justo odio, dapibus ac facilisis in, egestas
                         eget quam.</a>
-                    </span>
 
                 </li>
 
                 <li>
-                    <span class="footer-item-list-latest-title">Magna Parturient Aenean <br>
-                        <a href="" class="footer-item-list-latest-link">Cum sociis natoque penatibus et
+                    <span class="footer-item-list-latest-title">Magna Parturient Aenean</span>
+                    <a href="" class="footer-item-list-latest-link clearfix">Cum sociis natoque penatibus et
                         magnis dis parturient montes, nascetur ridiculus mus.</a>
-                    </span>
 
                 </li>
 
