Exam: in progress

--- a/GoIT/markup/exam/exam2/index.html
+++ b/GoIT/markup/exam/exam2/index.html
@@ -287,10 +287,12 @@
             <h4 class="footer-item-title">Latest articles</h4>
             <ul class="footer-item-list-latest">
                 <li>
-                    <span class="footer-item-list-latest-title">Fusce Etiam Bibenum</span>
-                    <a href="" class="footer-item-list-latest-link clearfix">Sed posuere consectetur est
-                        at lobortis.
-                    </a>
+                    <div class="footer-item-list-latest-item">
+                        <span class="footer-item-list-latest-title">Fusce Etiam Bibenum</span>
+                        <a href="" class="footer-item-list-latest-link clearfix">Sed posuere consectetur est
+                            at lobortis.
+                        </a>
+                    </div>
                 </li>
 
                 <li>
