--- a/GoIT/markup/exam/exam2/index.html
+++ b/GoIT/markup/exam/exam2/index.html
@@ -10,7 +10,6 @@
 </head>
 <body>
 <div class="wrapper">
-    <!--<div class="wrap">-->
     <div class="navigation">
         <p class="navigation-logo">Officetime
             <span>Officetime a psd template</span>
@@ -258,7 +257,7 @@
     </section>
     <hr class="between_sections">
 
-    <footer>
+    <footer class="clearfix">
         <div class="footer-item">
             <h4 class="footer-item-title">Single menu title</h4>
             <ul class="footer-item-list">
@@ -313,7 +312,6 @@
             </ul>
         </div>
     </footer>
-    <!--</div>-->
 </div>
 </body>
 </html>
