Exam: in progress

--- a/GoIT/markup/exam/exam2/index.html
+++ b/GoIT/markup/exam/exam2/index.html
@@ -211,46 +211,47 @@
 
         <div class="content-body">
             <div class="content-body-tabs">
-                <div class="content-body-tabs-header">
+                <div class="content-body-tabs-header"> <!--need to be closed-->
                     <a class="content-body-tabs-item content-body-tabs-item-selected">Tabbb One</a>
-                    <a class="content-body-tabs-item">Tabbb Two</a>
-                    <a class="content-body-tabs-item">Tabbb Three</a>
-                </div>
 
-                <div class="content-body-tabs-content-selected">
-                    <h3 class="content-body-head">You content can be
-                        <span class="text-highlight">highlighted</span> like this.
-                    </h3>
+                    <div class="content-body-tabs-content-selected active">
+                        <h3 class="content-body-head">You content can be
+                            <span class="text-highlight">highlighted</span> like this.
+                        </h3>
 
-                    <ul class="content-body-list">
-                        <li>Magna Porta</li>
-                        <li>Cras Amet Pharetra</li>
-                        <li>Ornare Dolor Oharetra</li>
-                        <li>Nibh Sit Elit</li>
-                        <li>Venenatis Tortor Aenean</li>
-                    </ul>
-                    <div class="content-body-item">
-                        <div class="content-body-item-img"><img src="img/road.jpg" alt=""/></div>
-                        <h4 class="content-body-item-head">Type a Title</h4>
+                        <ul class="content-body-list">
+                            <li>Magna Porta</li>
+                            <li>Cras Amet Pharetra</li>
+                            <li>Ornare Dolor Oharetra</li>
+                            <li>Nibh Sit Elit</li>
+                            <li>Venenatis Tortor Aenean</li>
+                        </ul>
+                        <div class="content-body-item">
+                            <div class="content-body-item-img"><img src="img/road.jpg" alt=""/></div>
+                            <h4 class="content-body-item-head">Type a Title</h4>
 
-                        <p class="content-body-item-text">Nulla vitae elit libero, a pharetra augue.
-                            Maecenas sed diam eget risus varius blandit sit amet magna.
-                        </p>
-                    </div>
-                    <div class="content-body-item">
-                        <div class="content-body-item-img"><img src="img/boat.jpg" alt=""/></div>
-                        <h4 class="content-body-item-head"></h4>
+                            <p class="content-body-item-text">Nulla vitae elit libero, a pharetra augue.
+                                Maecenas sed diam eget risus varius blandit sit amet magna.
+                            </p>
+                        </div>
+                        <div class="content-body-item">
+                            <div class="content-body-item-img"><img src="img/boat.jpg" alt=""/></div>
+                            <h4 class="content-body-item-head"></h4>
 
-                        <p class="content-body-item-text">Donec id elit non mi porta gravida at eget
-                            metus.
-                        </p>
+                            <p class="content-body-item-text">Donec id elit non mi porta gravida at eget
+                                metus.
+                            </p>
+                        </div>
                     </div>
 
-                    <div class="content-body-tabs-content">Doesn't matter what</div>
-                    <div class="content-body-tabs-content">Who cares?</div>
+                    <a class="content-body-tabs-item-second">Tabbb Two</a>
 
+                    <div class="content-body-tabs-content-second active">Doesn't matter what</div>
 
-                </div>
+                    <a class="content-body-tabs-item-third">Tabbb Three</a>
+
+                    <div class="content-body-tabs-content-third active">Who cares?</div>
+
             </div>
 
         </div>
