--- a/GoIT/markup/exam/exam2/index.html
+++ b/GoIT/markup/exam/exam2/index.html
@@ -228,21 +228,33 @@
                             <li>Nibh Sit Elit</li>
                             <li>Venenatis Tortor Aenean</li>
                         </ul>
-                        <div class="content-body-item">
-                            <div class="content-body-item-img"><img src="img/road.jpg" alt=""/></div>
-                            <h4 class="content-body-item-head">Type a Title</h4>
 
-                            <p class="content-body-item-text">Nulla vitae elit libero, a pharetra augue.
-                                Maecenas sed diam eget risus varius blandit sit amet magna.
-                            </p>
+                        <div class="content-body-item">
+                            <div class="content-body-item-img">
+                                <img src="img/road.jpg" alt=""/>
+                            </div>
+
+                            <div class="content-body-item-description">
+                                <h4 class="content-body-item-description-head">Type a Title</h4>
+
+                                <span class="content-body-item-description-text">Nulla vitae elit libero, a pharetra augue.
+                                    Maecenas sed diam eget risus varius blandit sit amet magna.
+                                </span>
+                            </div>
                         </div>
-                        <div class="content-body-item">
-                            <div class="content-body-item-img"><img src="img/boat.jpg" alt=""/></div>
-                            <h4 class="content-body-item-head"></h4>
 
-                            <p class="content-body-item-text">Donec id elit non mi porta gravida at eget
-                                metus.
-                            </p>
+                        <div class="content-body-item">
+                            <div class="content-body-item-img">
+                                <img src="img/boat.jpg" alt=""/>
+                            </div>
+
+                            <div class="content-body-item-description">
+                                <h4 class="content-body-item-description-head">Type a Title</h4>
+
+                                <p class="content-body-item-description-text">Donec id elit non mi porta gravida at eget
+                                    metus.
+                                </p>
+                            </div>
                         </div>
                     </div>
                     <div class="content-body-tabs-content" data="two">Doesn't matter what</div>
