--- a/GoIT/markup/exam/exam2/index.html
+++ b/GoIT/markup/exam/exam2/index.html
@@ -237,9 +237,9 @@
                             <div class="content-body-item-description">
                                 <h4 class="content-body-item-description-head">Type a Title</h4>
 
-                                <span class="content-body-item-description-text">Nulla vitae elit libero, a pharetra augue.
+                                <p class="content-body-item-description-text">Nulla vitae elit libero, a pharetra augue.
                                     Maecenas sed diam eget risus varius blandit sit amet magna.
-                                </span>
+                                </p>
                             </div>
                         </div>
 
@@ -248,7 +248,7 @@
                                 <img src="img/boat.jpg" alt=""/>
                             </div>
 
-                            <div class="content-body-item-description">
+                            <div class="content-body-item-description clearfix">
                                 <h4 class="content-body-item-description-head">Type a Title</h4>
 
                                 <p class="content-body-item-description-text">Donec id elit non mi porta gravida at eget
