Exam: +transform: scale

--- a/GoIT/markup/exam/exam2/index.html
+++ b/GoIT/markup/exam/exam2/index.html
@@ -99,15 +99,15 @@
                         <div class="articles-body-item-head-pic-hover">
 
                             <div class="circle-button">
-                                <div class="articles-body-item-head-pic-hover-arrow"></div>
+                                <div class="sprite arrow"></div>
                             </div>
 
                             <div class="circle-button">
-                                <div class="articles-body-item-head-pic-hover-plus">+</div>
+                                <div class="plus">+</div>
                             </div>
 
                             <div class="circle-button">
-                                <div class="articles-body-item-head-pic-hover-download"></div>
+                                <div class="sprite download"></div>
                             </div>
                         </div>
 
@@ -140,15 +140,15 @@
                         <div class="articles-body-item-head-pic-hover">
 
                             <div class="circle-button">
-                                <div class="articles-body-item-head-pic-hover-arrow"></div>
+                                <div class="sprite arrow"></div>
                             </div>
 
                             <div class="circle-button">
-                                <div class="articles-body-item-head-pic-hover-plus">+</div>
+                                <div class="plus">+</div>
                             </div>
 
                             <div class="circle-button">
-                                <div class="articles-body-item-head-pic-hover-download"></div>
+                                <div class="sprite download"></div>
                             </div>
                         </div>
                     </div>
@@ -178,15 +178,15 @@
                         <div class="articles-body-item-head-pic-hover">
 
                             <div class="circle-button">
-                                <div class="articles-body-item-head-pic-hover-arrow"></div>
+                                <div class="sprite arrow"></div>
                             </div>
 
                             <div class="circle-button">
-                                <div class="articles-body-item-head-pic-hover-plus">+</div>
+                                <div class="plus">+</div>
                             </div>
 
                             <div class="circle-button">
-                                <div class="articles-body-item-head-pic-hover-download"></div>
+                                <div class="sprite download"></div>
                             </div>
                         </div>
                     </div>
