--- a/GoIT/markup/JS/lesson1/Lesson_js_1.2.html
+++ b/GoIT/markup/JS/lesson1/Lesson_js_1.2.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Lesson_js_1</title>
+    <title></title>
 </head>
 <body>
 
-<script src="Lesson_js_1.js"></script>
+<script src="Lesson_js_1.2.js"></script>
 </body>
 </html>
