--- a/GoIT/markup/JS/lesson1/Task_js_1.1.html
+++ b/GoIT/markup/JS/lesson1/Task_js_1.1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Lesson_js_1</title>
+    <title>Task_js_1</title>
 </head>
 <body>
 
