Lesson_js_2:  in progress

--- a/GoIT/markup/JS/lesson2/Task_js_2.1.html
+++ b/GoIT/markup/JS/lesson2/Task_js_2.1.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Task_js_2.1</title>
 </head>
 <body>
-<script src="Lesson_js_2.2.js"></script>
+<script src="Lesson_js_2.1.js"></script>
 </body>
 </html>
