--- a/GoIT/markup/JS/lesson2/Task_js_2.1.html
+++ b/GoIT/markup/JS/lesson2/Task_js_2.1.html
@@ -5,6 +5,6 @@
     <title>Task_js_2.1</title>
 </head>
 <body>
-<script src="Lesson_js_2.1.js"></script>
+<script src="Task_js_2.1.js"></script>
 </body>
 </html>
