--- a/GoIT/markup/exam/exam2/index.html
+++ b/GoIT/markup/exam/exam2/index.html
@@ -43,8 +43,8 @@
         </section>
 
         <section id="about">
-            <p>About Us</p>
-            <p>We are a group of 2 experienced Developers and a Project Manager.</p>
+            <h1>About Us</h1>
+            <p>We are a small group of experienced Developers. blablabla</p>
         </section>
         <section id="team">
             <p>Team</p>
